# derp

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  assertion.c  derp.c  init.clp  oo.c  plugin.c  plugin1.c  raptor.c  retraction.c  rule.c  runexternal.c  triple.c
clips/: CMakeLists.txt  Makefile  engine.c  evaluatn.c  makefile~  multifld.c  reorder.c  setup.h  utility.c
include/: action.h  assertion.h  derp.h  knowledgebase.h  oo.h  plugin.h  retraction.h  rule.h  triple.h  typealiases.h  visibility.h
plugins/plugin1/: CMakeLists.txt  plugin1.c
plugins/raptor/: CMakeLists.txt  raptor.c
plugins/runexternal/: CMakeLists.txt  runexternal.c
src/: action.c  assertion.c  derp.c  knowledgebase.c  oo.c  rule.c
test/: CMakeLists.txt  testsuite.c
